fix default initial clippy location

--- a/assets/css/clippy.css
+++ b/assets/css/clippy.css
@@ -2,6 +2,8 @@
     position: fixed;
     z-index: 1000;
     cursor: pointer;
+    top: 80lvh;
+    left: 70lvw;
 }
 
 .clippy-balloon {
